; The library implementing the core of ocamlgrep without a CLI
(library
 (name ocamlgrep)
 (public_name ocamlgrep-lib)
 (libraries
   compiler-libs.common
   csexp
   unix
 )
)

(rule
 (target Match.ml)
 (deps Match.ml.cppo)
 (action (run cppo -V OCAML:%{ocaml_version} %{deps} -o %{target})))

(rule
 (target Ocamlgrep.ml)
 (deps Ocamlgrep.ml.cppo)
 (action (run cppo -V OCAML:%{ocaml_version} %{deps} -o %{target})))
