; The library implementing the core of ocamlgrep without a CLI
(library
 (name ocamlgrep)
 (public_name ocamlgrep-lib)
 (libraries
   compiler-libs.common
   csexp
   fpath
   unix
   yojson
 )
)

; chdir is essential to get correct source paths in the preprocessed output
(rule
 (target Match.ml)
 (deps Match.cppo.ml)
 (action
  (chdir %{workspace_root}
   (run cppo -V OCAML:%{ocaml_version} %{deps} -o %{target})
  )
 )
)

(rule
 (target Ocamlgrep.ml)
 (deps Ocamlgrep.cppo.ml)
 (action
  (chdir %{workspace_root}
    (run cppo -V OCAML:%{ocaml_version} %{deps} -o %{target})
  )
 )
)
