; Build the test executable like an ordinary OCaml executable
(executable
 (name test)
 (libraries
   testo
   ocamlgrep-lib
 )
)

; Build test.exe whenever @runtest is requested.
; Note that we can't run ocamlgrep or the tests from within Dune so a
; 'dune runtest' invocation will only build the test executable.
(alias
 (name runtest)
 (deps test.exe)
)

; The compilation of the test project 'proj' is done separately
; from the main project.
(dirs :standard \ proj)
